--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header mat-elevation-z4">
   <span>
-    <a>
+    <a routerLink="/">
       <img id="logo" src="" alt="logo">
     </a>
   </span>
@@ -9,7 +9,7 @@
       <i class="material-icons">
         home
       </i>
-      Aplicação Map
+      Início
     </a>
   </span>
 </mat-toolbar>
