--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,20 @@
-<p>product-create works!</p>
+<mat-card>
+  <mat-card-title>
+    Novo produto
+  </mat-card-title>
+  <form>
+    <mat-form-field>
+      <input matInput placeholder="Nome" [(ngModel)]="product.title" name="name">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Preço" [(ngModel)]="product.price" name="price">
+    </mat-form-field>
+  </form>
+</mat-card>
+
+<button mat-raised-button (click)="createProduct()" color="primary">
+  Salvar
+</button>
+<button mat-raised-button (click)="cancel()">
+  Cancel
+</button>
