Inclusao barra lateral

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="container-fluid" data-bs-theme="dark">
+  <div class="row">
+    <div class="col-12">
+      <app-product-read></app-product-read>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
