--- a/src/app/views/product/product.component.html
+++ b/src/app/views/product/product.component.html
@@ -1,5 +1,9 @@
-<button mat-raised-button (click)="navigateToProductCreate()" color="primary">
-  Novo produto
-</button>
+<div class="container" style="border: 2px solid red;">
+  <div class="row">
+    <button class="btn btn-primary btn-sm" (click)="navigateToProductCreate()" color="primary">
+      Novo produto
+    </button>
+  </div>
+</div>
 
-<app-product-read></app-product-read>
+
