transicao-mapbox-bkp

--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -4,7 +4,7 @@
   </mat-card-title>
   <form>
     <mat-form-field>
-      <input matInput placeholder="Nome" [(ngModel)]="product.title" name="name">
+      <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Preço" [(ngModel)]="product.price" name="price">
