--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -7,7 +7,7 @@
     </a>
     <form class="d-flex w-75 pe-2" role="search">
       <input class="form-control me-2" [(ngModel)]="searchFor" name="searchFor" type="search" placeholder="Pesquisar.." aria-label="Search">
-      <button class="btn btn-outline-light" (click)="searchProducts()">
+      <button class="btn btn-outline-light" [class.disabled]="searchControlFlag" (click)="searchProducts(searchFor)" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasExample">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
           <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
         </svg>
@@ -24,6 +24,27 @@
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sair</font></font></a></li>
       </ul>
+    </div>
+  </div>
+
+  <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+    <div class="offcanvas-header">
+      <h2 class="offcanvas-title fs-4" id="offcanvasScrollingLabel">Produtos</h2>
+      <button type="button" (click)="close()" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="list-group">
+        <a *ngFor="let product of products" href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <img src="https://github.com/twbs.png" alt="imagem" width="50" height="50" class="rounded-circle flex-shrink-0">
+          <div class="d-flex gap-2 w-100 justify-content-between">
+            <div>
+              <h6 class="mb-0 fs-6">{{ product.name }}</h6>
+              <p class="mb-0 opacity-75">{{ product.description }}</p>
+            </div>
+            <small class="opacity-75 fs-6 text-nowrap">R$ {{ product.price }}</small>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 </nav>
