--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,7 +1,6 @@
-<div class="container-fluid" data-bs-theme="dark">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <app-product-read></app-product-read>
       <router-outlet></router-outlet>
     </div>
   </div>
