--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -1,3 +1,4 @@
 <main>
-    <div id="ol-map" class="map-container"></div>
+    <!--<div id="ol-map" class="map-container"></div>-->
+    <div id="map-box" style='width: 100%; height: 91vh;'></div>
 </main>
