--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -12,7 +12,7 @@
   </form>
 </mat-card>
 
-<button mat-raised-button (click)="createProduct()" color="primary">
+<button mat-raised-button color="primary">
   Salvar
 </button>
 <button mat-raised-button (click)="cancel()">
